Added more detail to the sections

--- a/CapstoneWeek2.ipynb
+++ b/CapstoneWeek2.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The car crash dataset is rich with many factors including weather, lighting, and road conditions. With these factors, I aim to develop a model that will predict the severity of a car crash. Drivers should be more vigilant and cautious when factors suggest a car crash may be more severe."
+    "From a business or application perspective, many parties would be interested in knowing car accident severity based on weather, lighting, and road conditions. Tow companies, police departments, and drivers themselves should be aware of when car crash severity may be increased. This is a machine learning problem. Thus, I will be using the car crash dataset, which includes weather, lighting, and road conditions. With these factors, I aim to develop a model that will predict the severity of a car crash. Drivers should be more vigilant and cautious when factors suggest a car crash may be more severe. Tow companies and police departments should be aware of these risks as well in order to respond more effectively."
    ]
   },
   {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "(194673, 38)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -326,6 +326,48 @@
    "metadata": {},
    "source": [
     "There are two values for crash severity and most accidents are Category 1 (not severe)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Here, I check what are the unique values of each factor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Overcast' 'Raining' 'Clear' nan 'Unknown' 'Other' 'Snowing'\n",
+      " 'Fog/Smog/Smoke' 'Sleet/Hail/Freezing Rain' 'Blowing Sand/Dirt'\n",
+      " 'Severe Crosswind' 'Partly Cloudy']\n",
+      "['Wet' 'Dry' nan 'Unknown' 'Snow/Slush' 'Ice' 'Other' 'Sand/Mud/Dirt'\n",
+      " 'Standing Water' 'Oil']\n",
+      "['Daylight' 'Dark - Street Lights On' 'Dark - No Street Lights' nan\n",
+      " 'Unknown' 'Dusk' 'Dawn' 'Dark - Street Lights Off' 'Other'\n",
+      " 'Dark - Unknown Lighting']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (df.WEATHER.unique())\n",
+    "\n",
+    "print(df.ROADCOND.unique())\n",
+    "\n",
+    "print(df.LIGHTCOND.unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we understand enough about our data to begin preprocessing and model training."
    ]
   }
  ],
